--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     display:flex;
     align-items: center;
     gap:20px;
+    justify-content:space-around;
     
     min-width:100vw;
 
@@ -19,6 +20,9 @@ nav{
     
 
 }
+nav a{
+    display:inline-block;
+}
 body{
     
     padding:0;
@@ -33,9 +37,9 @@ body{
     left:0;
     top:0;
     
-    object-fit: contain;
+    object-fit:cover;
 }
-ul{
+div{
     position:fixed;
     background-color: #33374188;
 }
